# omarchy-chromium

./: .SRCINFO  001-omarchy-theme-switcher.patch  002-omarchy-policy-reload.patch  003-policy-theme-fixes.patch  004-fix-wayland.patch  004-policy-theme-accent.patch  GITHUB_WORKFLOWS.md  MANUAL_FIX.md  PACKAGE_DISTRIBUTION.md  PKGBUILD  PKGBUILD.arm64  PKGBUILD.rbe  PKGBUILD.rbe-full  PREPARE_MACHINE.md  RBE_BUILD_INSTRUCTIONS.md  README.md  TESTING.md  WIP_WORKFLOW.md  build-from-existing-checkout.sh  build-package-only.sh  build-with-rbe-full.sh  build-with-rbe.sh  check_upstream.sh  chromium-launcher.sh  chromium.args.arm64.gn  chromium.args.gn  clean-and-build-rbe.sh  do_update.sh  fetch-chromium-full-rbe  fetch-chromium-release  fetch-chromium-release-rbe  fix-siso-and-continue.sh  n8n_new.json  nightly_build.sh  nightly_build_v2.sh  omarchy-chromium.install  omarchy-policy-reload.patch  omarchy-theme-switcher.patch  quick-rbe-build.sh  setup_cron.sh  (+6 more)
.github/workflows/: manual-build.yml  nightly-build.yml  quick-release.yml  test-runner.yml  test-theme-patch.yml
scripts/: setup-builder.sh
